fix(browser): navbar z-index (fixed #98)

--- a/views/pages/project-detail/index.css
+++ b/views/pages/project-detail/index.css
@@ -188,7 +188,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 200;
+  z-index: 999;
   display: flex;
   overflow: hidden;
 
